# zeps

./: README.md  extract.py  pyproject.toml
src/zeps/: __init__.py  __main__.py
src/zeps/footage/: __init__.py  compress.py  copy.py  recognition.py
