[project]
name = "zeps"
version = "0.1.0"
description = "Zyxir's everyday Python scripts."
authors = [
    {name = "Eric Zhuo Chen", email = "ericzhuochen@outlook.com"},
]
dependencies = ["isort>=6.0.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
